lexilla/test/examples/errorlist/AllStyles.err
Default 0
Some text in default


Python Error 1
  File "x.err", line 2


Gcc Error 2, Find In Files Match 21
ScintillaGTKAccessible.cxx:153:13: warning: Deprecated pre-processor symbol, replace with 


Microsoft Error 3
LexErrorList.cxx(15): fatal error C1083: Cannot open include file: 'ILexer.h': No such file or directory

PlatQt.obj : error LNK2019: unresolved external symbol "class Scintilla::PRectangle __cdecl Scintilla::PixelAlign(class Scintilla::PRectangle const &,int)" (?PixelAlign@Scintilla@@YA?AVPRectangle@1@AEBV21@H@Z) referenced in function "public: virtual void __cdecl Scintilla::SurfaceImpl::FillRectangleAligned(class Scintilla::PRectangle,class Scintilla::Fill)" (?FillRectangleAligned@SurfaceImpl@Scintilla@@UEAAXVPRectangle@2@VFill@2@@Z)

NMAKE : fatal error U1077: '"C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\VC\Tools\MSVC\14.28.29910\bin\HostX64\x64\link.EXE"' : return code '0x460'


Command 4
>pwd


Borland Error 5
Error E2378 oddEven.c 16: For statement missing ; in function main()


Perl Error 6
Bareword found where operator expected at LexMMIXAL.cxx line 1, near "// Scintilla"


DotNET Traceback 7
   at ExceptionTrace.Program.f4() in C:\Ivan\dev\exp\ExceptionTrace\Program.cs:line 18


Lua Error 8
last token read: `result' at line 40 in file `Test.lua'


Ctags 9
IsAWordChar	LexMMIXAL.cxx	/^static inline bool IsAWordChar(const int ch) {$/;"	f	file:


Diff Changed ! 10
! 		GdkColor white = { 0, 0xFFFF, 0xFFFF, 0xFFFF};


Diff Addition + 11
+    <PlatformToolset>v142</PlatformToolset>


Diff Deletion - 12
-    <PlatformToolset>v141</PlatformToolset>


Diff Message --- 13
--- a/win32/SciTE.vcxproj	Fri Jan 31 12:23:51 2020 +1100


PHP error 14
Fatal error: Call to undefined function:  foo() in example.php on line 11


Essential Lahey Fortran 90 Error 15
Line 11, file c:\fortran90\codigo\demo.f90


Intel Fortran Compiler Error 16
Error 71 at (17:teste.f90) : The program unit has no name


Intel Fortran Compiler v8.0 Error 17
fortcom: Error: shf.f90, line 5602: This name does not have ...


Absoft Pro Fortran 90 Error 18
cf90-113 f90fe: ERROR SHF3D, File = shf.f90, Line = 1101, Column = 19


HTML Tidy 19
line 8 column 1 - Error: unexpected </head> in <meta>


Java Runtime Stack Trace 20
	at MethodName>(FileName.java:33)


GCC Include Path 22
In file included from /usr/include/gtk-2.0/gtk/gtkobject.h:37,


GCC Pointer 25
  236 | void            gtk_type_init   (GTypeDebugFlags    debug_flags);
      |                                                                ^


Escape Sequence 23
[K


Escape Sequence Unknown 24
[1n


Escape Sequence Colour 40
[0mColour 0 is 40


Escape Sequence Colour 41
[31mColour 1 is 41
